--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
 	background: url("http://artmusela.com/wp-content/uploads/2013/01/LACMA3.jpg");
-	background-repeat: no-repeat;
-	background-size: 100%;
 	font-family: "Century Gothic";
 }
 
@@ -34,15 +32,21 @@ a {
 	margin-top: 5px;
 	font-size: 14px;
 	z-index: 2;
+	text-decoration: none;
 }
 
 a:hover {
 	color: white;
 }
 
+p {
+	font-family: "Century Gothic";
+	font-size: 14px;
+	margin-top: 0px;
+}
+
 #container {
 	width: 270px;
-	height: 300px;
 	background-color: #008B8B;
 	opacity: 0.8;
 	border-radius: 5px;
