--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	background: url("http://artmusela.com/wp-content/uploads/2013/01/LACMA3.jpg");
-	font-family: "Century Gothic";
+	background-repeat: no-repeat;
+  font-family: "Century Gothic";
 }
 
 h1 {
@@ -26,6 +27,7 @@ h3 {
 	padding-bottom: 10px;
 }
 
+
 a {
 	display: block;
 	color: black;
@@ -39,6 +41,10 @@ a:hover {
 	color: white;
 }
 
+h3#about_me:hover {
+  color: rgb(253, 181, 66);
+}
+
 p {
 	font-family: "Century Gothic";
 	font-size: 14px;
@@ -46,28 +52,53 @@ p {
 }
 
 #container {
-	width: 270px;
-	background-color: #008B8B;
-	opacity: 0.8;
-	border-radius: 5px;
-	margin-left: 5px;
-	padding-left: 5px;
-
+	width: 1200px;
+  height: 450px;
 }
 
 #contents {
-	text-align: left;
+	float: left;
+  width: 270px;
+  height: 450px;
+  background-color: #008B8B;
+  opacity: 0.8;
+  border-radius: 5px;
+  margin-left: 5px;
+  padding-left: 5px;
+  text-align: left;
 	padding-left: 10px;
 	opacity: 1;
-
 }
 
+#viewer {
+  float: left;
+  position: block;
+  width: 700px;
+  height: 450px;
+  margin-left: 30px;
+}
 
+#viewer img {
+  display: none;
+  max-height: 100%;
+  opacity: 0.8;
+  border-radius: 5px;
+  border: 1px solid black;
+  box-shadow: 0.05em 0.05em 0.2em black;
+}
 
+#art_credit {
+  font-family: "Century Gothic";
+  font-size: 10px;
+  color: white;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+  margin-left: 10px;
+}
 
-
-
-
+#art_credit:hover {
+	font-size: 16px;
+	color: yellow;
+}
 
 
 
