add border to contents

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ p {
   text-align: left;
 	padding-left: 10px;
 	opacity: 1;
+  border: 1px solid black;
 }
 
 #viewer {
@@ -92,6 +93,7 @@ p {
 }
 
 #art_credit {
+  clear: both;
   font-family: "Century Gothic";
   font-size: 10px;
   color: white;
